// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config/secrets validateConfigSecrets(config) replaces secrets in a subobject 1`] = `
Object {
  "npm": Object {
    "npmToken": "abc123==",
  },
}
`;

exports[`config/secrets validateConfigSecrets(config) replaces secrets in the top level 1`] = `
Object {
  "npmToken": "abc123==",
}
`;
